# gp

./: CMakeLists.txt  package.xml  wks.yml
include/rhoban_gp/: auto_tuning.h  scoring.h  tools.h
include/rhoban_gp/core/: covariance_function.h  covariance_function_factory.h  gaussian_process.h  neural_network.h  neural_network2.h  squared_exponential.h
include/rhoban_gp/gradient_ascent/: randomized_rprop.h  rprop.h
include/rosban_gp/: auto_tuning.h  multivariate_gaussian.h  scoring.h  tools.h
include/rosban_gp/core/: covariance_function.h  covariance_function_builder.h  covariance_function_factory.h  gaussian_process.h  neural_network.h  neural_network2.h  squared_exponential.h
include/rosban_gp/gradient_ascent/: randomized_rprop.h  rprop.h
scripts/: figure5.3.r  plotFunctions.r  plotPrediction.r
src/exercises/: 2.9.1.cpp  figure2.5.cpp  figure4.5b.cpp  figure5.10.cpp  figure5.3.cpp  testGradient.cpp
src/experiments/: test_io.cpp  test_randomized_gp.cpp
src/rhoban_gp/: auto_tuning.cpp  scoring.cpp  tools.cpp
src/rhoban_gp/core/: covariance_function.cpp  covariance_function_factory.cpp  gaussian_process.cpp  neural_network.cpp  neural_network2.cpp  squared_exponential.cpp
src/rhoban_gp/gradient_ascent/: randomized_rprop.cpp  rprop.cpp
src/rosban_gp/: auto_tuning.cpp  multivariate_gaussian.cpp  scoring.cpp  tools.cpp
src/rosban_gp/core/: covariance_function.cpp  covariance_function_builder.cpp  covariance_function_factory.cpp  gaussian_process.cpp  neural_network.cpp  neural_network2.cpp  squared_exponential.cpp
src/rosban_gp/gradient_ascent/: randomized_rprop.cpp  rprop.cpp
symbolic_computations/: neural_network2_diff.mac
