<?xml version="1.0"?>
<package>
  <name>rosban_gp</name>
  <version>0.0.0</version>
  <description>This package contains some implementation of Gaussian Processes based on the book of Rasmussen</description>

  <maintainer email="medrimonia@gmail.com">medrimonia</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosban_random</build_depend> <!-- rhoban/rosban_random.git -->
  <build_depend>rosban_utils</build_depend> <!-- rhoban/rosban_utils.git -->

  <run_depend>rosban_random</run_depend>
  <run_depend>rosban_utils</run_depend>

  <export>
  </export>
</package>
